--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
-  <label> mark </label>
-  <input name="mark"></input>
-  <label>shift</label>
-  <input name="label"></input>
-  <label> Baud </label>
-  <input name="baud"></input>
-  <script src="index.js"></script>
+  <body>
+    <label> mark </label>
+    <input name="mark" value=2000></input>
+    <label>shift</label>
+    <input name="shift" value=1000></input>
+    <label> Baud </label>
+    <input name="baud" value=300></input>
+    <button onClick="run()"> run </button>
+    <canvas width="2048"></canvas>
+    <script src="index.js"></script>
+  </body>
 </html>
