Some initial goetzel work

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <label>shift</label>
     <input name="shift" value=1000></input>
     <label> Baud </label>
-    <input name="baud" value=300></input>
+    <input name="baud" value=100></input>
     <button onClick="run()"> run </button>
-    <canvas width="2048"></canvas>
+    <canvas width="2048" height="800"></canvas>
     <script src="index.js"></script>
   </body>
 </html>
