Fix html formatting

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
   <body>
-    <label> mark </label>
-    <input name="mark" value=2000></input>
-    <label>shift</label>
-    <input name="shift" value=1000></input>
-    <label> Baud </label>
-    <input name="baud" value=100></input>
-    <button onClick="run()"> run </button>
-    <canvas width="2048" height="800"></canvas>
+    <div>
+      <label> mark </label>
+      <input name="mark" value=2000>
+      <label>shift</label>
+      <input name="shift" value=1000>
+      <label> Baud </label>
+      <input name="baud" value=100>
+      <button onClick="run()"> run </button>
+      <canvas width="2048" height="800"></canvas>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
