Updating naming and interface

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <body>
     <div>
-      <label> mark </label>
-      <input name="mark" value=2000>
-      <label>shift</label>
-      <input name="shift" value=1000>
+      <label> Low </label>
+      <input name="low" value=2125>
+      <label> High </label>
+      <input name="high" value=2295>
       <label> Baud </label>
-      <input name="baud" value=100>
+      <input name="baud" value=45.45>
       <button onClick="run()"> run </button>
       <canvas width="2048" height="800"></canvas>
     </div>
