Encode data on the fly

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
       <input name="high" value=2295>
       <label> Baud </label>
       <input name="baud" value=45.45>
+      </br>
+      <textarea name="message"> hello world my name is john tim boby</textarea>
       <button onClick="run()"> run </button>
       <canvas width="2048" height="800"></canvas>
     </div>
-    <script src="index.js"></script>
+    <script src="dist.js"></script>
   </body>
 </html>
