rough mic hookup
Still need to implement a tuner and DRY up code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       <input name="baud" value=45.45>
       </br>
       <textarea name="message"> hello world my name is john tim boby</textarea>
-      <button onClick="run()"> run </button>
+      <button onClick="noise.run()"> run </button>
+      <button onClick="noise.mic()"> mic </button>
+      <button onClick="noise.closeMic()"> close mic </button>
       <canvas width="6000" height="800"></canvas>
     </div>
     <script src="dist.js"></script>
