--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <label> Baud </label>
       <input name="baud" value=45.45>
       </br>
-      <textarea name="message"> hello world my name is john tim boby</textarea>
+      <textarea name="message"> helyo </textarea>
       <button onClick="noise.run()"> run </button>
       <button onClick="noise.mic()"> mic </button>
       <button onClick="noise.closeMic()"> close mic </button>
