Add over the air decoding!

--- a/graph/index.html
+++ b/graph/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <script src="node_modules/lodash/index.js"></script>
-    <script src="graph.js"></script>
+    <script src="dist.js"></script>
   </body>
 </html>
