--- a/live-wave/index.html
+++ b/live-wave/index.html
@@ -1,11 +1,20 @@
 <html>
   <head>
     <style>
+      .reload {
+        font-size: 60px;
+        font-weight: bold;
+        position: absolute;
+        bottom: 0;
+        right: 10px;
+        color: #CCC;
+      }
       * { padding: 0; margin: 0; }
       canvas {display: block; margin: 0 auto; width: 100%; max-width: 1024px;}
     </style>
   </head>
   <body>
     <script src="dist.js"></script>
+    <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
   </body>
 </html>
