--- a/live-wave/index.html
+++ b/live-wave/index.html
@@ -9,12 +9,14 @@
         right: 10px;
         color: #CCC;
       }
+      .close {position: absolute; bottom: 10px; left: 10px; font-size: 20px; opacity: 0.5}
       * { padding: 0; margin: 0; }
       canvas {display: block; margin: 0 auto; width: 100%; max-width: 1024px;}
     </style>
   </head>
   <body>
     <script src="dist.js"></script>
-    <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
+    <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
+     <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
   </body>
 </html>
