--- a/basic-demo/graph.html
+++ b/basic-demo/graph.html
@@ -23,6 +23,7 @@
         font-size: 25px;
       }
       * { padding: 0; margin: 0; }
+      .close {position: absolute; bottom: 10px; left: 10px; font-size: 20px; opacity: 0.5}
       canvas {display: block; margin: 0 auto; width: 100%; max-width: 1024px;}
     </style>
   </head>
@@ -33,6 +34,7 @@
       <canvas width="600" height="200"></canvas>
     </div>
     <script src="dist.js"></script>
+    <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
     <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
   </body>
 </html>
