--- a/basic-demo/speed.html
+++ b/basic-demo/speed.html
@@ -18,6 +18,7 @@
         margin: 20px auto;
         font-size: 25px;
       }
+      .close {position: absolute; bottom: 10px; left: 10px; font-size: 20px; opacity: 0.5}
       * { padding: 0; margin: 0; }
     </style>
   </head>
@@ -27,6 +28,7 @@
       <button onClick='noise.run(700, "hello world how are you, I am well thanks for asking I hope all is well")'>Fast Run (700 Baud)</button>
     </div>
     <script src="dist.js"></script>
+    <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
     <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
   </body>
 </html>
