--- a/component-demos/string-to-binary-to-wave.html
+++ b/component-demos/string-to-binary-to-wave.html
@@ -18,6 +18,7 @@
         color: #CCC;
       }
       button {display: block; width: 200px; margin: 0 auto; height: 50px}
+    .close {position: absolute; bottom: 10px; left: 10px; font-size: 20px; opacity: 0.5}
       * { padding: 0; margin: 0; }
     </style>
   </head>
@@ -28,6 +29,7 @@
       <canvas id="wave" width="800px" height="250px"></canvas>
     </div>
     <script src="dist.js"></script>
+    <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
 
     <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
     <button onClick="noise.stopOsc()">stop</button>
