--- a/component-demos/string-to-binary.html
+++ b/component-demos/string-to-binary.html
@@ -16,6 +16,7 @@
         right: 10px;
         color: #CCC;
       }
+    .close {position: absolute; bottom: 10px; left: 10px; font-size: 20px; opacity: 0.5}
       * { padding: 0; margin: 0; }
     </style>
   </head>
@@ -25,6 +26,7 @@
       <textarea id="output"></textarea>
     </div>
     <script src="dist.js"></script>
+    <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
 
     <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
   </body>
