Tweak graph size

--- a/basic-demo/everything.html
+++ b/basic-demo/everything.html
@@ -35,10 +35,10 @@
   <body>
     <div class='demo'>
       <textarea id='input'> All Together Now </textarea>
-      <textarea id='output'>.. Decoded ..</textarea>
+      <textarea id='output'>....</textarea>
       <input type="number" id='baud' value="300"></input>
       <button id='run-demo' onClick='noise.run(parseInt(document.querySelector("#baud").value), null, true)'>Run it!</button>
-      <canvas width='600' height='300'></canvas>
+      <canvas width='600' height='125'></canvas>
     </div>
     <script src="dist.js"></script>
     <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
