change noise copy

--- a/basic-demo/noise.html
+++ b/basic-demo/noise.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <div class='demo'>
-      <textarea id='input'> All Together Now </textarea>
+      <textarea id='input'> So Much Noise </textarea>
       <textarea id='output'>....</textarea>
       <button id='run-demo' onClick='noise.run(45.45, null, true, true)'>Run it!</button>
       <canvas width='600' height='125'></canvas>
