Use internal blank page

--- a/basic-demo/noise.html
+++ b/basic-demo/noise.html
@@ -40,7 +40,7 @@
       <canvas width='600' height='125'></canvas>
     </div>
     <script src="dist.js"></script>
-    <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
+    <div class="close" onClick="window.location='https://samccone.github.io/noise/blank.html'">&#x2717;</div>
     <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
   </body>
 </html>
