--- a/component-demos/oscillator.html
+++ b/component-demos/oscillator.html
@@ -19,7 +19,7 @@
       <input type="range" min="500" max="4000" value="1400" onChange="noise.updateOsc()"/>
     </div>
     <script src="dist.js"></script>
-    <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
+    <div class="close" onClick="window.location='https://samccone.github.io/noise/blank.html'">&#x2717;</div>
     <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
     <button onClick="noise.stopOsc()">stop</button>
   </body>
