--- a/component-demos/string-to-binary.html
+++ b/component-demos/string-to-binary.html
@@ -26,7 +26,7 @@
       <textarea id="output"></textarea>
     </div>
     <script src="dist.js"></script>
-    <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
+    <div class="close" onClick="window.location='https://samccone.github.io/noise/blank.html'">&#x2717;</div>
 
     <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
   </body>
