--- a/basic-demo/speed.html
+++ b/basic-demo/speed.html
@@ -28,7 +28,7 @@
       <button onClick='noise.run(700, "hello world how are you, I am well thanks for asking I hope all is well")'>Fast Run (700 Baud)</button>
     </div>
     <script src="dist.js"></script>
-    <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
+    <div class="close" onClick="window.location='https://samccone.github.io/noise/blank.html'">&#x2717;</div>
     <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
   </body>
 </html>
