--- a/component-demos/string-to-binary-to-wave.html
+++ b/component-demos/string-to-binary-to-wave.html
@@ -29,7 +29,7 @@
       <canvas id="wave" width="800px" height="250px"></canvas>
     </div>
     <script src="dist.js"></script>
-    <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
+    <div class="close" onClick="window.location='https://samccone.github.io/noise/blank.html'">&#x2717;</div>
 
     <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
     <button onClick="noise.stopOsc()">stop</button>
