--- a/live-wave/index.html
+++ b/live-wave/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <script src="dist.js"></script>
-    <div class="close" onClick="window.location='http://blank.org/'">&#x2717;</div>
+    <div class="close" onClick="window.location='https://samccone.github.io/noise/blank.html'">&#x2717;</div>
      <div class="reload" onClick="window.location=window.location">&#x21bb;</div>
   </body>
 </html>
