--- a/basic-demo/index.html
+++ b/basic-demo/index.html
@@ -30,7 +30,7 @@
   <body>
     <div class='demo'>
       <textarea id='input'> Hello JSCONF! </textarea>
-      <button id='run-demo' onClick='noise.run()'>Run And Decode</button>
+      <button id='run-demo' onClick='noise.run(45.45)'>Run And Decode</button>
       <textarea id='output'></textarea>
     </div>
     <script src="dist.js"></script>
