--- a/basic-demo/speed.html
+++ b/basic-demo/speed.html
@@ -24,8 +24,8 @@
   </head>
   <body>
     <div class='demo'>
-      <button onClick='noise.run(10, "hi")'>Slow Run (10 Baud)</button>
-      <button onClick='noise.run(700, "hello world how are you, I am well thanks for asking I hope all is well")'>Fast Run (700 Baud)</button>
+      <button onClick='noise.run(10, "hi", null, false, 1)'>Slow Run (10 Baud)</button>
+      <button onClick='noise.run(600, "hello world how are you, I am well thanks for asking I hope all is well", null, false, 1)'>Fast Run (600 Baud)</button>
     </div>
     <script src="dist.js"></script>
     <div class="close" onClick="window.location='https://samccone.github.io/noise/blank.html'">&#x2717;</div>
