--- a/dialup-demo/index.html
+++ b/dialup-demo/index.html
@@ -10,6 +10,7 @@
         align-items: center;
         justify-content: center;
         text-rendering: geometricPrecision;
+        zoom: 1.4;
       }
 
       #connection {
