--- a/progressive/index.html
+++ b/progressive/index.html
@@ -6,7 +6,7 @@
   </style>
   <body>
     <br>
-    <img onclick="load()" alt='wow' src="data:image/jpg;base64," width="100%">
+    <img onclick="load()" alt='best image ever' src="data:image/jpg;base64," width="100%">
     <script src="index.js"></script>
   </body>
 </html>
